--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "framer-motion": "^12.0.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.14",
     "web-vitals": "^4.2.4"
   },
